Some more CSS work

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ p {
     font-weight: 500;
 }
 #gameAreaDiv {
+    opacity: 1;
     background-color: #f8f8f8;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
